# zephyr_wamr_runtime

./: CMakeLists.txt  README.md  app.overlay  prj.conf
src/: main.c
